--- a/ScheduledShutdown/ScheduledShutdown.csproj
+++ b/ScheduledShutdown/ScheduledShutdown.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net7.0-windows8.0</TargetFramework>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
@@ -14,7 +14,6 @@
     <Platforms>AnyCPU</Platforms>
     <ApplicationIcon>flash.ico</ApplicationIcon>
     <ApplicationManifest>app.manifest</ApplicationManifest>
-    <SupportedOSPlatformVersion>8.0</SupportedOSPlatformVersion>
 	<PublishSingleFile>true</PublishSingleFile>
 	<SelfContained>true</SelfContained>
   </PropertyGroup>
