Add feature to monitor a NUT server and shutdown if UPS indicates power loss

--- a/ScheduledShutdown/ScheduledShutdown.csproj
+++ b/ScheduledShutdown/ScheduledShutdown.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <PackageReference Include="helloserve.SePush" Version="1.0.1" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
+    <PackageReference Include="NUTDotNetClient" Version="0.2.0-alpha" />
   </ItemGroup>
 
   <ItemGroup>
